--- a/netcat_template/template/brigadir_new/partials/HeaderDesktop.html
+++ b/netcat_template/template/brigadir_new/partials/HeaderDesktop.html
@@ -16,32 +16,32 @@
                   <a href='/prices/'>Цены</a>
 <?= nc_browse_sub(82, $linksUL) ;?>
               </li>
-				<li class="no-menu"><a href='/letters/'>Отзывы</a></li>
-				<li class="no-menu"><a href='/news/'>Новости</a></li>
-				<li class="no-menu"><a href='/attendance/'>Для ТСЖ</a></li>
-				<li class="no-menu"><a href='/helpfulinfo/'>Полезное</a></li>
-				<li class="no-menu"><a href='/contactus/'>Контакты</a></li>
+                <li class="no-menu"><a href='/letters/'>Отзывы</a></li>
+                <li class="no-menu"><a href='/news/'>Новости</a></li>
+                <li class="no-menu"><a href='/attendance/'>Для ТСЖ</a></li>
+                <li class="no-menu"><a href='/helpfulinfo/'>Полезное</a></li>
+                <li class="no-menu"><a href='/contactus/'>Контакты</a></li>
           </ul>
     </div>
           <div class="clr"></div>
 <div class="contacts">
-	<div class="gradi_bot"><a href="writeus.html" class="fr _popup2-call" rel="_popup2-order" style="position:relative; left:-3x; margin-top:14px;"><a class="button" href="/order/">вызвать мастера</a></a>
-	<div class='h2'>Контакты</div>
-	<div class="col fl">
-		<p>Санкт-Петербург<br /><span class="blue">(812) <big>300-20-20</big><br />(812) <big>929-09-82</big></span></p>
-	</div>
-	<div class="col fr">
-		<p>Москва<br /><span class="blue">(499) <big>653-74-87</big><br /><a class="popup2-call" href="#" rel="popup2-call"> <div class="button orange">заказать звонок</div> </a></span><br></p>
-	</div>
+    <div class="gradi_bot"><a href="writeus.html" class="fr _popup2-call" rel="_popup2-order" style="position:relative; left:-3x; margin-top:14px;"><a class="button" href="/order/">вызвать мастера</a></a>
+    <div class='h2'>Контакты</div>
+    <div class="col fl">
+        <p>Санкт-Петербург<br /><span class="blue">(812) <big>300-20-20</big><br />(812) <big>929-09-82</big></span></p>
+    </div>
+    <div class="col fr">
+        <a class="popup2-call" href="#" rel="popup2-call"> <div class="button orange">заказать звонок</div> </a></span><br></p>
+    </div>
 <div class="clr"></div>
-	<div class="list_dot" style="position:relative; top:-3px;">
-		<ul>
-			<li>Прием заявок по телефону: с 09:00 до 22:00;</li>
-			<li><a rel="_popup2-order" class="_popup2-call" href="/order/">Прием заявок с сайта</a> и по почте: в любое время.</li>
-		</ul>
-	</div>
+    <div class="list_dot" style="position:relative; top:-3px;">
+        <ul>
+            <li>Прием заявок по телефону: с 09:00 до 22:00;</li>
+            <li><a rel="_popup2-order" class="_popup2-call" href="/order/">Прием заявок с сайта</a> и по почте: в любое время.</li>
+        </ul>
+    </div>
 <div class="clr"></div>
-	</div>
+    </div>
 </div>
 <?= nc_objects_list(1, 204) ;?>
 </div>
