--- a/netcat_template/template/brigadir_new/partials/ScriptAdaptiv.html
+++ b/netcat_template/template/brigadir_new/partials/ScriptAdaptiv.html
@@ -65,11 +65,10 @@
     <div class="phone-line">
         <div class="phone">
             <h2>Санкт-Петербург</h2>
-            <h3><a name="format-detection" content="telephone=no" href="tel:+78123002020">(812) 300-20-20</a></h3>
-            <h3><a name="format-detection" content="telephone=no" href="tel:+78129290982">(812) 929-09-82</a></h3>
+            <h3><a content="telephone=no" href="tel:+78123002020">(812) 300-20-20</a></h3>
         </div>
         <div class="phone">
-            <h3 style="margin-top:17px;"><a name="format-detection" content="telephone=no" href="tel:+78129290982">(812) 929-09-82</a></h3>
+            <h3 class="phone-h3-2"><a content="telephone=no" href="tel:+78129290982">(812) 929-09-82</a></h3>
         </div>
         <div class="recall">
             <a href="/order/"> <img src="/images/button.svg" class="call-img-new"></a>
