--- a/netcat_template/template/brigadir_new/partials/MobileBlocks.html
+++ b/netcat_template/template/brigadir_new/partials/MobileBlocks.html
@@ -22,9 +22,11 @@
         <div class="clearfix"></div>
     </div>
 
+<? if ($sub != 100): ?>
     <div class="news js_6">
         <div class="clearfix"></div>
     </div>
+<? endif; ?>
     <div class="questions">
         <div id="call"></div>
         <div class="head white">есть вопросы?</div>
