--- a/netcat_template/template/brigadir_new/partials/Moments.html
+++ b/netcat_template/template/brigadir_new/partials/Moments.html
@@ -1,4 +1,4 @@
-                    <div class="important-moments js_5_bl">
+                    <div class="important-moments js_5_bl<? if ($sub == 100): ?> d-hid<? endif; ?>">
                         <div class="none">ВАЖНЫЕ МОМЕНТЫ</div>
                         <a href="/about/advantage/" class="imb">
                           <img src="/brigadir/images/desctop/important1.svg" data-src="/brigadir/images/important1.svg">
