--- a/netcat_template/template/brigadir_new/partials/Moments.html
+++ b/netcat_template/template/brigadir_new/partials/Moments.html
@@ -1,4 +1,4 @@
-                    <div class="important-moments js_5_bl<? if ($sub == 100): ?> d-hid<? endif; ?>">
+                    <div class="important-moments js_5_bl<? if ($sub == 100 || $sub == 83 || $sub == 116 || $sub == 89 || $sub == 92 || $sub == 93 || $sub == 94 || $sub == 95 || $sub == 96 || $sub == 224 || $sub == 159): ?> d-hid<? endif; ?>">
                         <div class="none">ВАЖНЫЕ МОМЕНТЫ</div>
                         <a href="/about/advantage/" class="imb">
                           <img src="/brigadir/images/desctop/important1.svg" data-src="/brigadir/images/important1.svg">
