--- a/netcat_template/template/brigadir_new/partials/MobileBlocks.html
+++ b/netcat_template/template/brigadir_new/partials/MobileBlocks.html
@@ -57,7 +57,7 @@
         <input type="" name="" class="phone-mask" placeholder="Номер телефона">
         <div class="question-button">заказать звонок</div>
         <div class="clearfix"></div>
-        <p class="send-info">Нажимая «Заказать звонок», вы соглашаетесь с правилами <a class="empty" href="empty.html">обработки персональных данных.</a></p>
+        <p class="send-info">Нажимая «Заказать звонок», вы соглашаетесь с правилами <a class="empty" href="/about/agreement/">обработки персональных данных.</a></p>
 
         <div class="clearfix"></div>
     </div>
